Fix navbar not visible on ios.

--- a/components/molecules/Navbar/Navbar.module.scss
+++ b/components/molecules/Navbar/Navbar.module.scss
@@ -11,11 +11,13 @@
   left: 0;
 
   .box {
-    margin-left: abs((100vw - 1440px) / 2);
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    @media screen and (min-width: 1440px) {
+      margin-left: abs((100vw - 1440px) / 2);
+    }
   }
 
   @media #{$not-touch} {
